2008-08-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/Makefile.am.template, test/runner.cxx, test/test027.cxx,
 test/test028.cxx, test/test029.cxx, test/test039.cxx, test/test_helpers.hxx,
 test/unit/Makefile.am.template, test/unit/runner.cxx:
  - Missed some spots in converting to test framework
  - Run all tests in directory as single program!
  - Test build & run now 20% faster on my laptop
  - Should be easier to build tests with Visual C++'s stupid project files
2008-08-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test072.cxx, test/test073.cxx, test/test074.cxx, test/test075.cxx,
 test/test076.cxx, test/test077.cxx, test/test078.cxx, test/test079.cxx,
 test/test080.cxx, test/test082.cxx, test/test083.cxx, test/test084.cxx,
 test/test085.cxx, test/test086.cxx, test/test087.cxx, test/test088.cxx,
 test/test090.cxx, test/test092.cxx, test/test093.cxx, test/test094.cxx:
  - Converted to test framework
  - All tests done now!
2008-08-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test001.cxx, test/test013.cxx, test/test016.cxx, test/test017.cxx, 
 test/test018.cxx, test/test020.cxx, test/test021.cxx, test/test023.cxx, 
 test/test024.cxx, test/test025.cxx, test/test026.cxx, test/test030.cxx, 
 test/test031.cxx, test/test032.cxx, test/test033.cxx, test/test034.cxx, 
 test/test035.cxx, test/test036.cxx, test/test037.cxx, test/test038.cxx, 
 test/test035.cxx, test/test046.cxx, test/test048.cxx, test/test049.cxx, 
 test/test050.cxx, test/test051.cxx, test/test052.cxx, test/test053.cxx, 
 test/test054.cxx, test/test055.cxx, test/test056.cxx, test/test057.cxx, 
 test/test058.cxx, test/test059.cxx, test/test060.cxx, test/test061.cxx, 
 test/test062.cxx, test/test063.cxx, test/test064.cxx, test/test065.cxx, 
 test/test066.cxx, test/test067.cxx, test/test068.cxx, test/test069.cxx, 
 test/test070.cxx, test/test071.cxx, test/test085.cxx, test/test088.cxx, 
 test/test089.cxx, test/test090.cxx, test/test092.cxx,
 test/test_helpers.hxx, test/unit/test_test_helpers.cxx: