@@ -34,11 +34,10 @@ public:
   virtual void operator()(int be_pid)
   {
     m_Done = true;
-    if (be_pid != Backend_PID)
-      throw logic_error("Expected notification from backend process " +
-		        to_string(Backend_PID) +
-			", but got one from " +
-			to_string(be_pid));
+    PQXX_CHECK_EQUAL(
+	be_pid,
+	Backend_PID,
+	"Notification came from wrong backend process.");
 
     cout << "Received notification: " << name() << " pid=" << be_pid << endl;
   }
